@@ -24,7 +24,7 @@ CSceneNodeAnimatorDelete::CSceneNodeAnimatorDelete(ISceneManager* manager, u32 t
 //! animates a scene node
 void CSceneNodeAnimatorDelete::animateNode(ISceneNode* node, u32 timeMs)
 {
-	if (timeMs > FinishTime)
+	if (timeMs > FinishTime+PauseTimeSum)
 	{
 		HasFinished = true;
 		if(node && SceneManager)
@@ -44,6 +44,7 @@ ISceneNodeAnimator* CSceneNodeAnimatorDelete::createClone(ISceneNode* node, ISce
 
 	CSceneNodeAnimatorDelete* newAnimator =
 		new CSceneNodeAnimatorDelete(newManager, FinishTime);
+	newAnimator->cloneMembers(this);
 
 	return newAnimator;
 }
