@@ -15,11 +15,14 @@ CSceneNodeAnimatorFlyCircle::CSceneNodeAnimatorFlyCircle(u32 time,
 		const core::vector3df& center, f32 radius, f32 speed,
 		const core::vector3df& direction, f32 radiusEllipsoid)
 	: Center(center), Direction(direction), Radius(radius),
-	RadiusEllipsoid(radiusEllipsoid), Speed(speed), StartTime(time)
+	RadiusEllipsoid(radiusEllipsoid), Speed(speed)
 {
 	#ifdef _DEBUG
 	setDebugName("CSceneNodeAnimatorFlyCircle");
 	#endif
+
+	StartTime = time;
+
 	init();
 }
 
@@ -45,10 +48,10 @@ void CSceneNodeAnimatorFlyCircle::animateNode(ISceneNode* node, u32 timeMs)
 	f32 time;
 
 	// Check for the condition where the StartTime is in the future.
-	if(StartTime > timeMs)
-		time = ((s32)timeMs - (s32)StartTime) * Speed;
+	if(StartTime+PauseTimeSum > timeMs)
+		time = ((s32)timeMs - (s32)(StartTime+PauseTimeSum)) * Speed;
 	else
-		time = (timeMs-StartTime) * Speed;
+		time = (timeMs-(StartTime+PauseTimeSum)) * Speed;
 
 //	node->setPosition(Center + Radius * ((VecU*cosf(time)) + (VecV*sinf(time))));
 	f32 r2 = RadiusEllipsoid == 0.f ? Radius : RadiusEllipsoid;
@@ -59,6 +62,8 @@ void CSceneNodeAnimatorFlyCircle::animateNode(ISceneNode* node, u32 timeMs)
 //! Writes attributes of the scene node animator.
 void CSceneNodeAnimatorFlyCircle::serializeAttributes(io::IAttributes* out, io::SAttributeReadWriteOptions* options) const
 {
+	ISceneNodeAnimator::serializeAttributes(out, options);
+
 	out->addVector3d("Center", Center);
 	out->addFloat("Radius", Radius);
 	out->addFloat("Speed", Speed);
@@ -70,6 +75,8 @@ void CSceneNodeAnimatorFlyCircle::serializeAttributes(io::IAttributes* out, io::
 //! Reads attributes of the scene node animator.
 void CSceneNodeAnimatorFlyCircle::deserializeAttributes(io::IAttributes* in, io::SAttributeReadWriteOptions* options)
 {
+	ISceneNodeAnimator::deserializeAttributes(in, options);
+
 	Center = in->getAttributeAsVector3d("Center");
 	Radius = in->getAttributeAsFloat("Radius");
 	Speed = in->getAttributeAsFloat("Speed");
@@ -89,6 +96,7 @@ ISceneNodeAnimator* CSceneNodeAnimatorFlyCircle::createClone(ISceneNode* node, I
 {
 	CSceneNodeAnimatorFlyCircle * newAnimator =
 		new CSceneNodeAnimatorFlyCircle(StartTime, Center, Radius, Speed, Direction, RadiusEllipsoid);
+	newAnimator->cloneMembers(this);
 
 	return newAnimator;
 }
