@@ -38,18 +38,6 @@ namespace scene
 		(IReferenceCounted::drop()) the returned pointer after calling
 		this. */
 		virtual ISceneNodeAnimator* createClone(ISceneNode* node, ISceneManager* newManager=0) _IRR_OVERRIDE_;
-		
-		//! Reset a time-based movement by changing the starttime. 
-		virtual void setStartTime(u32 time) _IRR_OVERRIDE_
-		{
-			StartTime = time;
-		}
-		
-		//! Get the starttime. 
-		virtual irr::u32 getStartTime() const _IRR_OVERRIDE_
-		{
-			return StartTime;
-		}		
 
 	private:
 		// do some initial calculations
@@ -65,7 +53,6 @@ namespace scene
 		f32 Radius;
 		f32 RadiusEllipsoid;
 		f32 Speed;
-		u32 StartTime;
 	};
 
 
