@@ -41,18 +41,6 @@ namespace scene
 		(IReferenceCounted::drop()) the returned pointer after calling
 		this. */
 		virtual ISceneNodeAnimator* createClone(ISceneNode* node, ISceneManager* newManager=0) _IRR_OVERRIDE_;
-		
-		//! Reset a time-based movement by changing the starttime. 
-		virtual void setStartTime(u32 time) _IRR_OVERRIDE_
-		{
-			StartTime = time;
-		}
-		
-		//! Get the starttime. 
-		virtual irr::u32 getStartTime() const _IRR_OVERRIDE_
-		{
-			return StartTime;
-		}
 
 	protected:
 
@@ -62,7 +50,6 @@ namespace scene
 		core::array< core::vector3df > Points;
 		f32 Speed;
 		f32 Tightness;
-		u32 StartTime;
 		bool Loop;
 		bool PingPong;
 	};
